--- a/fe-src/public/index.html
+++ b/fe-src/public/index.html
@@ -10,6 +10,14 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
 
     <title>Buttes-Chaumont</title>
+
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-EEECBQ1BRJ"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-EEECBQ1BRJ');
+    </script>
 </head>
 <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
